--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  height: 100%;
+  height: auto;
 }
 
 body {
@@ -11,10 +11,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', 'sans-serif';
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: grayscale;
-  height: 100%;
+  height: auto;
 }
 
 #root {
-  height: 100%;
+  height: auto;
 }
 
