--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 html {
-  height: 100%;
+  height: 100%       
+  ;
 }
 
 body {
@@ -15,6 +16,6 @@ body {
 }
 
 #root {
-  height: 100%;
+  height: 300%;
 }
 
