--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,18 @@
 @tailwind utilities;
 
 html {
-  height: 120%       
-  ;
+	height: 100%;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', 'sans-serif';
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: grayscale;
-  height: 120%;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue", "sans-serif";
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: grayscale;
+	height: 100%;
 }
 
 #root {
-  height: 120%;
+	height: 100%;
 }
-
